1.4.12.uu1
==========

* Make Timing_engraver instantiatable, add to Score_performer. Fixes bar checks
in MIDI


1.4.12.af1
==========

* Debian patches.


1.4.12.jcn1
===========

* Documentation/topdocs/INSTALL.texi: Add section for MacOS X.

* darwin.patch: New file.

1.4.12
======

1.4.11.uu1
==========

* Backport from 1.5: pitched rest. Syntax a4\rest

* Backport from 1.5: on-the-fly polyphony. See reference manual.

* Backport from 1.5: bugfix with overlapping bars and span-bars.

1.4.10.uu1
==========

* pktrace for makefile, spec, etc.

* fresh/used translator bugfix (backport from 1.5)

* rest-collision fix (backport from 1.5)

1.4.10.jcn2
===========

* Documentation/windows/compiling.texi: Update.

* Documentation/index.texi: Add link to orphaned compiling for
  windows page.

* stepmake/bin/add-html-footer.py: Python2.[12] re workarounds.

* Documentation/footer.html.in: Comment fix.

* po: regenerate.

* lilypond-1.4.10/midi2ly/lilypond-stream.cc (header): Add xgettext
helper comment.

* stepmake/bin: backport from 1.5

* Documentation/windows/installing.texi:
* Documentation/windows/compiling.texi: Update for Cygwin's teTeX.

* Documentation/windows/gs-profile.sh: previously lily-gs.sh

1.4.10
======

1.4.9.uu2
=========

* drum-pitch updates

* Bugfix in German Chords (thanks Rune)

* lilypond-book updates from 1.5

* dotsDown identifier

* Resurrected bibliography stuff

* Move bar checking into iterator so skip-typesetting can be used to
find failed bar-checks.

* Between barlines span-bar patch, version from lily 1.5 

* Bugfix: showStaffSwitch should be a voice property.

1.4.9.jcn3
==========

* Really included .cvsignore.

* Added Cygwin setup.hint

* Removed tex, python wrappers and postinstalls to go with Cywgin's
  tetex/texmf, python installations.

* Updated cygwin installer.

* ly2dvi: Don't accept filenames with spaces (+ fix).

1.4.9.mb1
=========

* Documentation fix, papersize

* Allow for font markup in stanza numbers.
